--- a/hera/time-csv-to-plots/Dockerfile
+++ b/hera/time-csv-to-plots/Dockerfile
@@ -5,7 +5,8 @@ FROM python:3.12-slim
 WORKDIR /app
 
 # Copy the rest of the application code into the container
-COPY . .
+COPY csv-to-plots.py .
+COPY requirements.txt .
 
 # Install the Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
